changed font and styling
also added hero shot image. a completely different look thanks to UX council feedback

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Regina | About</title>
 	<link rel="stylesheet" type="text/css" href="assets/main.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sunflower:300,700">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,700|Yeseva+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -25,6 +25,7 @@
 <div style="padding-top: 150px;"></div>
 
 <div class="container_about">
+	<h1>About Me</h1>
 	<img src="assets/profpic.png" alt="Profile Photo" style="height: 350px; width: 420px;">
 	<h2><b>empathetic, resilient, goofy</b></h2>
 	<p>Much of who I am is based on my love for understanding people, my grit and determination to learn anything I set my mind to, and my light-hearted, silly attitude towards life. </p>
@@ -33,7 +34,7 @@
 	<br>
 	<br>
 	<div class="container_aboutCourses">
-		<p>RELEVANT COURSES</p>
+		<h2>Relevant Courses</h2>
 		<ul>
 			<li class="courses">ENGS 12: Design Thinking, <em>received Citation of Excellence</em></li>
 			<li class="courses">ENGS 21: Intro to Engineering, <em>received Phillip R. Jackson award for Best Overall Project</em></li>
