--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Regina Yan</title>
 	<link rel="stylesheet" type="text/css" href="assets/main.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sunflower:300,700">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,700|Yeseva+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -12,7 +12,7 @@
 	<div class="head">
 	<div style="padding-top: 35px;"></div>
 	<header class="container">
-		<a href="index.html"><img class="logo" src="assets/reginaLogo.png" alt="Regina Yan"></a>
+		<a href="index.html"><img class="logo" src="assets/reginaLogo1.png" alt="Regina Yan"></a>
 		<div class="topnav" id="myTopnav">
 			<a href="designthinking.html" class="unselected">Design Thinking</a><a class="hide">__</a>
 			<a href="uiux.html" class="unselected">UI/UX</a><a class="hide">__</a>
@@ -27,22 +27,22 @@
 
 <div class="container_home">
 	<div class="home_intro">
-	<h2><b>Hi there, I'm </b></h2>
-	<h1>
+	<h3 style="color:white;">Hi there, I'm </h3>
+	<h1 style="color:white;">
 		REGINA
 	</h1>
-	<h2>
+	<h3 style="color:white;">
 		I'm a designer and engineer with a passion for the outdoors and human-centered design.
-	</h2>
-	<h2>
+	</h3>
+	<h3 style="color:white;">
 		Thanks for stopping by!
-	</h2>
+	</h3>
 	</div>
 </div>
 
 <div class="container_intro">
 	<h2 style="font-size: 28px">
-		<b>FEATURED PROJECTS</b>
+		Featured Projects
 	</h2>
 </div>
 	
