--- a/projects/alianza.html
+++ b/projects/alianza.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Regina | Branding | La Alianza Latina</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sunflower:300,700">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,700|Yeseva+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -25,6 +25,7 @@
 
 <div class="top_padding"></div>	
 	<div class="box_content">
+		<h1>La Alianza Latina Logo</h1>
 		<div class="proj_img">
 			<img src="../assets/projecttile-33.png" style= "height:450px; width:450px;">
 		</div>
@@ -32,7 +33,7 @@
 			La Alianza Latina held a logo design contest my sophomore year. They asked for a logo that would represent the different identities within the Latinx community, so I created a logo with wrapping letters that would symbolize intersectionality. This design ultimately won, and the committee asked for a few revisions and iterations which are pictured below. 
 			</p>
 			<p>
-			<b>TAKEAWAYS</b>
+			<h2>Takeaways</h2>
 			</p>
 			<p>
 			At this point I started to watch YouTube videos to expand my photoshop skills and play with text effects, and it was rewarding to see those efforts pay off. It's amazing how many resources are out there, and this was the project that encouraged me to start watching videos to improve my design skills. 	
