--- a/projects/bgd.html
+++ b/projects/bgd.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Regina | Branding | Big Green Dreams</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sunflower:300,700">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,700|Yeseva+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -25,6 +25,7 @@
 
 <div class="top_padding"></div>	
 	<div class="box_content">
+		<h1>Big Green Dreams Stickers</h1>
 		<div class="proj_img">
 			<img src="../assets/gg1.jpg" style= "height:450px; width:450px;">
 
@@ -34,7 +35,7 @@
 			I created these stickers my freshman spring for Big Green Dreams, a campaign launched by Dartmouth Sustainability’s EcoReps to promote sustainability and "green dreams" for the College. 
 			</p>
 			<p>
-			<b>TAKEAWAYS</b>
+			<h2>Takeaways</h2>
 			</p>
 			<p>
 			This was my first real project and the launching point for my design path at college. I stumbled upon this opportunity when a friend who knew about my doodling habits recommended me to the EcoReps. I had never created designs before and did not have the software or hardware to so, but thanks to my roommate’s iPad and lots of patience (fingers are quite imprecise), I started drawing my ideas. Overall, I really learned how to push myself and never turn down a project, because in this case it led me to more opportunities that brought me to where I am today.  	
