--- a/projects/cabaret.html
+++ b/projects/cabaret.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Regina | Illustration | Cabaret</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sunflower:300,700">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,700|Yeseva+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -25,6 +25,7 @@
 
 <div class="top_padding"></div>	
 	<div class="box_content">
+		<h1>Cabaret Poster</h1>
 		<div class="proj_img">
 			<img src="../assets/cabaret-01.png" style= "height:663px; width:429px;">
 		</div>
@@ -33,7 +34,7 @@
 		Collis Governing Board asked me to create a poster for Collis Cabaret, a show that features faculty and student performers. I designed this poster in Illustrator and am proud of how the objects and shadows turned out.
 		</p>
 		<p>
-		<b>TAKEAWAYS</b>
+		<h2>Takeaways</h2>
 		</p>
 		<p>
 		I really wanted to build on color theory lessons I learned from my painting class and use lighting as a way to push myself. I think I accomplished that here, especially with the chair. Moving forwards I'll definitely think about lighting more and how different kinds of lighting can evoke different moods.	
