--- a/projects/campdart.html
+++ b/projects/campdart.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Regina | Illustration | Camp Dartmouth</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sunflower:300,700">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,700|Yeseva+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -25,6 +25,7 @@
 
 <div class="top_padding"></div>	
 	<div class="box_content">
+		<h1>Camp Dartmouth Shirts</h1>
 		<div class="proj_img">
 			<img src="../assets/18X-02.png" style= "height:300px; width:300px;">
 			<img src="../assets/18X-04.png" style= "height:300px; width:300px;">
