--- a/projects/dmcposter.html
+++ b/projects/dmcposter.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Regina | Illustration | DMC</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sunflower:300,700">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,700|Yeseva+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -25,17 +25,18 @@
 
 <div class="top_padding"></div>	
 	<div class="box_content">
+		<h1>DMC Posters</h1>
 		<div class="proj_img">
 <!-- 			<img src="../assets/dmcmock.png" style= "height:385px; width:650px;"> -->
 			<img src="../assets/pouroneout.png" style= "height:432px; width:306px;">
 			<img src="../assets/dmcposter.png" style= "height: 432px; width:306px;">
 		</div>
 		<p>
-		I created the following posters and stickers for the Dartmouth Mountaineering Club's 18S Gear order. The club really wanted some posters to encapsulate the personalitiy and history of Dartmouth mountaineering, which inspired these first two designs. 
+		I created these posters for the Dartmouth Mountaineering Club's 18S Gear order. The club really wanted some posters to encapsulate the personalitiy and history of Dartmouth mountaineering, which inspired these first two designs. 
 		The first poster was inspired by the numerous break trips that the club has during the winter and spring. Each night, we would sit around the campfire retelling the day's adventures and playing the Wine Game, a traditional drinking game that honors "DMCers past and present" and begins with the phrase written on the poster. 
 		</p>
 		<p>
-		<b>TAKEAWAYS</b>
+		<h2>Takeaways</h2>
 		</p>
 		<p>
 		This was one of my favorite projects to work on since the DMC holds such a special place in my life. Rather than most projects where I was asked to create something, I took initiative on this one and loved how much I pushed myself when I had personal ties to this project. In the future, I'll make sure to bring that mentality into everything I design!	
