--- a/projects/earthweek.html
+++ b/projects/earthweek.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Regina | Branding | Earth Week</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sunflower:300,700">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,700|Yeseva+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -25,6 +25,7 @@
 
 <div class="top_padding"></div>	
 	<div class="box_content">
+		<h1>Earth Week Branding</h1>
 		<div class="proj_img">
 			<img src="../assets/earthweeklogo.png" style= "height:450px; width:450px;">
 		</div>
@@ -38,7 +39,7 @@
 			<img src="../assets/swapandshop.png" style= "height:512px; width:396px;">
 		</div>
 			<p>
-			<b>TAKEAWAYS</b>
+			<h2>Takeaways</h2>
 			</p>
 			<p>
 			This project marks the start of my introduction to Illustrator and the glorious pen tool. I had previously used an iPad/Sketchbook and Photoshop to create designs, but I branched out into vector designs here. Looking back, I would definitely change a lot of colors and typography and think more about decluttering the poster (and making everything more readable). But overall, I am very happy with how everything turned out. 
