--- a/projects/ef.html
+++ b/projects/ef.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Regina | Branding | EF Education First</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sunflower:300,700">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,700|Yeseva+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -25,6 +25,7 @@
 
 <div class="top_padding"></div>	
 	<div class="box_content">
+		<h1>EF Education First Branding</h1>
 		<p>
 		Below are some samples (with permission) of my work as a Brand Marketing Intern for the Recruitment team at EF Education First. I designed external campaign material, from flyers and slide decks (shown below) to email/web campaigns used during college career fairs. The main goal for these pieces was to reflect EF's brand and encourage candidates to apply!
 ​		</p>
@@ -39,32 +40,29 @@
 		</p>
 
 		<div class="proj_img">
+		<h2>Recruitment flyers sample (external)</h2>
 		<img src="../assets/EFcollage.png" style= "height:341px; width:659px;">
-		<p><b>Recruitment flyers sample (external)</b></p>
 		</div>
 		<br>
 		<br>
 
 		<div class="proj_img">
+		<h2>Recruitment slide deck sample (external)<h2>
 		<img src="../assets/EFcollage1.png" style= "height:135px; width:660px;">
-		<br>
-		<p><b>Recruitment slide deck sample (external)</b></p>
 		</div>
 		<br>
 		<br>
 
 		<div class="proj_img">
+		<h2>Benefits campaign (internal)</h2>
 		<img src="../assets/EFcollage2.png" style= "height:321px; width:514px;">
-		<br>
-		<p><b>Benefits campaign (internal)</b></p>
 		</div>
 		<br>
 		<br>
 
 		<div class="proj_img">
+		<h2>Recruitment and Brand Marketing Guide (internal)</h2>
 		<img src="../assets/EFmock.png" style= "height:365px; width:560px;">
-		<br>
-		<p><b>Recruitment and Brand Marketing Guide (internal)</b></p>
 		<p>I found that this job was very flexible with a lot of freedom. However, the expectations felt vague at times, so I wrote, designed, printed, and bound this pamphlet that serves as an on-boarding guide for the next intern in this position.</p>
 		</div>
 
