--- a/projects/iceposter.html
+++ b/projects/iceposter.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Regina | Illustration | Winter Carnival 2017</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sunflower:300,700">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,700|Yeseva+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -25,6 +25,7 @@
 
 <div class="top_padding"></div>	
 	<div class="box_content">
+		<h1>2017 Winter Carnival Poster</h1>
 		<div class="proj_img">
 			<img src="../assets/post.jpg" style= "height:864px; width:576px;">
 		</div>
@@ -34,7 +35,7 @@
 		I created this submission in Photoshop and used a drawing pad for the design. The design features various Dartmouth buildings in the castle, classic winter events, and flying dragons.  
 		</p>
 		<p>
-		<b>TAKEAWAYS</b>
+		<h2>Takeaways</h2>
 		</p>
 		<p>
 		While this design did not win, I received a lot of constructive criticism that helped me going forwards. The biggest comment I received regarded my lack of a central figure on the poster - there's a lot going on, but there's no main element. If I were to work on this more, I would either increase the size of the castle and make that the central focal or point, or do the same with the person on the dragon. Definitely something I'll work on in the future! 	
