--- a/projects/kaf.html
+++ b/projects/kaf.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Regina | UI/UX | Line@KAF</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sunflower:300,700">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,700|Yeseva+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -25,11 +25,12 @@
 
 <div class="top_padding"></div>
 <div class="box_content">
+		<h1>Line@KAF App</h1>
 		<div class="proj_img">
 			<img src="../assets/projecttile-42.png" style= "height:450px; width:450spx;">
 		</div>
 		<p>
-		<b>Status: Completed app, awaiting launch</b>
+		<h2>Status: Completed app, awaiting launch</h2>
 		</p>
 		<p>
 		KAF, or King Arthur Flour, is a popular cafe in Dartmouth's Baker Berry library. It is overwhelmingly popular, especially between class periods with 20-minute wait times, that “long KAF line” has become a prevalent campus meme. 
@@ -40,23 +41,20 @@
 		<p>
 		I took these insights into account when figuring out the most important features that this app needed to have. I worked mostly on the illustration and UX side while the other designer on the team focused on the wireframes. 
 		</p>
-		<p>
-		<b>TAKEAWAY</b>
-		</p>
+
+		<h2>Takeaways</h2>
 		<p>
 		This was my first break into UI/UX design, and while I focused more on the UI side, I started understanding the process of wireframing and prototyping interfaces. This project is in the process of deployment, and the beta version will be out by Fall 2018, woohoo! 
 		</p>
 		<p>
-		<b>User flow sketches</b>	
+		<h2>User flow sketches</h2>	
 		</p>
 
 		<div class="proj_img">
 		<img src="../assets/linekafflow.jpeg" style= "height:344px; width:510px;">
 		</div>
 
-		<p>
-		<b>Line visualization and mockup ideas</b>	
-		</p>
+		<h2>Line visualization and mockup ideas</h2>	
 
 		<div class="proj_img">
 		<img src="../assets/LineKAF.png" style= "height:364px; width:593px;">
