--- a/projects/lapdesk.html
+++ b/projects/lapdesk.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Regina | Modeling | ENGS33</title>
+	<title>Regina | Modeling | Lapdesk</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sunflower:300,700">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,700|Yeseva+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -25,12 +25,13 @@
 
 <div class="top_padding"></div>
 <div class="box_content">
+	<h1>Design Thinking: Lapdesk</h1>
 		<div class="proj_img">
 			<img src="../assets/projecttile-54.png" style= "height:450px; width:450px;">
 			<p>Read more about my Design Thinking projects <a href="../designthinking.html" class="link">here!</a></p>
 		</div>
 
-		<p><b>TIMELINE:</b> 1 week</p>
+	<h2>TIMELINE:</b> 1 week</h2>
 	<p><b>SKILLS:</b> Observational Research, Needfinding, Prototyping, Iterating</p>
 	<p> For one of the projects in my Design Thinking class, we were tasked with creating a device to help Dartmouth students better manage the things they need to carry with them. I worked in a team of three, and each of us observed our potential users for three hours to have a general idea of students' needs.</p>
 	<p>We assembled our insights and ideas, and found the issue of students dropping items in class due to lack of desk space (often no desk space at all) to be a common and compelling problem. One student in particular, Grace, had to juggle her laptop, assignments, notebook, water bottle and pens all on a tiny swing-out board near her seat, and she never got through class without items rolling off. </p>
@@ -51,7 +52,8 @@
 		<img src="../assets/lapdesk-05.png" style="width: 338px; height:252px">
 		<img src="../assets/lapdesk-06.png" style="width: 338px; height:252px">
 	</div>
-	<p><b>TAKEAWAY:</b> This was the first project where we had a user. I learned that <b>including the user throughout the process</b> is key to creating a product that he or she will actually use. Many features of our final prototype would not have existed without the input and feedback from users testing the product. For example, we added the paper holder on the bottom after realizing that our user still had to stuff papers into her backpack at she was running out of class.</p>
+	<h2>Takeaways</h2>
+		<p>This was the first project where we had a user. I learned that <b>including the user throughout the process</b> is key to creating a product that he or she will actually use. Many features of our final prototype would not have existed without the input and feedback from users testing the product. For example, we added the paper holder on the bottom after realizing that our user still had to stuff papers into her backpack at she was running out of class.</p>
 
 
 	</div>
