--- a/projects/lily.html
+++ b/projects/lily.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Regina | Modeling | Lily</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sunflower:300,700">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,700|Yeseva+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -25,6 +25,7 @@
 
 <div class="top_padding"></div>
 <div class="box_content">
+		<h1>Lily Model</h1>
 		<div class="proj_img">
 			<img src="../assets/projecttile-37.png" style= "height:450px; width:450px;">
 		</div>
@@ -36,9 +37,7 @@
 		A year after this class, I took CS27 "Projects in Digital Arts" and created a <a href="stressball.html" class="link">short film</a> where my team incorporated this character. It was awesome seeing how much better our skills were and how much Maya improved in just a year! 
 		</p>
 		
-		<p>
-		<b>T-Pose & Initial Sketches</b>
-		</p>
+		<h2>T-Pose & Initial Sketches</h2>
 		<div class="proj_img">
 			<img src="../assets/tpose1.png" style= "height:240px; width:200px;">
 			<img src="../assets/tpose2.png" style= "height:240px; width:167px;">
@@ -49,9 +48,7 @@
 		<br>
 		<br>
 
-		<p>
-		<b>Modeling</b>	
-		</p>
+		<h2>Modeling</h2>	
 		<div class="proj_img">
 			<img src="../assets/modeling1.png" style= "height:270px; width:330px;">
 			<img src="../assets/modeling2.png" style= "height:210px; width:190px;">
@@ -61,9 +58,7 @@
 		<br>
 		<br>
 
-		<p>
-		<b>Texturing the Skin (with Subsurface Scattering) and Clothing</b>	
-		</p>
+		<h2>Texturing the Skin (with Subsurface Scattering) and Clothing</h2>	
 		<div class="proj_img">
 			<img src="../assets/texturing1.png" style= "height:183px; width:296px;">
 			<img src="../assets/texturing2.png" style= "height:245px; width:145px;">
@@ -72,9 +67,7 @@
 		<br>
 		<br>
 
-		<p>
-		<b>Rigging (Human IK, Skinning, Paint Weights, Blend Shapes)</b>	
-		</p>
+		<h2>Rigging (Human IK, Skinning, Paint Weights, Blend Shapes)</h2>	
 		<div class="proj_img">
 			<img src="../assets/rigging1.png" style= "height:245px; width:255px;">
 			<img src="../assets/rigging2.png" style= "height:245px; width:318px;">
