--- a/projects/meta.html
+++ b/projects/meta.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Regina | UI/UX | Meta!</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sunflower:300,700">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,700|Yeseva+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -26,6 +26,7 @@
 	<div class="top_padding"></div>
 
 <div class="box_content">
+		<h1>Personal Website</h1>
 		<div class="proj_img">
 			<img src="../assets/projecttile-45.png" style= "height:450px; width:450spx;">
 		</div>
@@ -36,7 +37,7 @@
 		<p>
 		So, I watched a few youtube videos and played around with some online tutorials to create this site over my junior summer. I wrote basic HTML/CSS and included a bit of Javascript for the Design Thinking page. Once I had a general template, I wrote out documentation and description for the projects I’ve designed. The hardest part honestly was getting myself to stop - I would start coding/writing after dinner and suddenly realize that it's 3AM! 
 		</p>
-		<p><b>TAKEAWAYS</b></p>
+		<h2>Takeaways</h2>
 		<p>
 		I am starting to delve deeper into the UI/UX field, and I'm so excited to explore even more. I've spoken with a few web engineers during my internship at Cogo Labs to ask for feedback and advice on moving forward. I will be learning React next and working more closely with developers… we'll see what happens!
 		</p>
