--- a/projects/provost.html
+++ b/projects/provost.html
@@ -25,6 +25,7 @@
 
 <div class="top_padding"></div>	
 	<div class="box_content">
+		<h1>Holiday Card</h1>
 		<div class="proj_img">
 			<img src="../assets/ProvostCard1.png" style= "height:630px; width:450px;">
 			<img src="../assets/provostcard_yan.jpg" style= "height:630px; width:450px;">
@@ -33,9 +34,7 @@
 			<p>
 			The Office of the Provost holds a holiday card design competition each summer to celebrate academics at Dartmouth. The design I created in 2016 showcases a snow globe with objects stacked in the shape of our Baker Berry library. My 2017 design features a pop-up book and various buildings around campus. My designs won both years, and it's really cool to see how much I have improved over the course of the year! I used a desktop paint application and drawing pad for the earlier design and learned Illustrator by the time I created the 2017 card.  
 			</p>
-			<p>
-			<b>TAKEAWAYS</b>
-			</p>
+			<h2>Takeaways</h2>
 			<p>
 			This was my first time designing for the same competition and theme twice, and it was wonderful seeing my personal growth through the two designs. It makes me excited to see where I'll be a year from now, and I still look back to these two designs as inspiration to push myself harder.	
 			</p>
