--- a/projects/sa.html
+++ b/projects/sa.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Regina | South Africa</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sunflower:300,700">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,700|Yeseva+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -25,6 +25,7 @@
 
 <div class="top_padding"></div>	
 	<div class="box_content">
+		<h1>South Africa Video</h1>
 		<div class="container_video">
 			<iframe width="640" height="360" src="https://www.youtube.com/embed/znKuaubFDAs" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 			<p>
@@ -37,9 +38,7 @@
 			<p>
 			This video was shot on an iPhone 6 and edited with Premiere Pro.
 			</p>
-			<p>
-			<b>TAKEAWAYS</b>
-			</p>
+			<h2>Takeaways</h2>
 			<p>
 			This was my first exposure to Premiere Pro. While I had done some video editing before with iMovie, I wanted to push myself to create something better with more sophisticated software. I learned quite a bit about film editing and will definitely try to make some more trip videos going forward (hopefully with a better camera!). Most of the footage was captured for fun without the intention of turning the clips into a film, so I'm hoping that being more intentional about the shots will create better results in the future. All in all, I ended up submititng this project to the Moosilauke Film Festival, and it came in first! 
 			</p>
