--- a/projects/stressball.html
+++ b/projects/stressball.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Regina | Modeling | Stressed Out</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sunflower:300,700">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,700|Yeseva+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -25,6 +25,7 @@
 
 <div class="top_padding"></div>	
 	<div class="box_content">
+		<h1>Stressed Out short film</h1>
 		<div class="container_video">
 			<iframe width="640" height="360" src="https://www.youtube.com/embed/wtvrAmJGzM4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		</div>
@@ -32,9 +33,7 @@
 			During my Junior Spring, I took CS27: Projects in Digital Arts and create an animated film with Stephanie Guo ’18 and Esteban Acevedo ’18. We created everything, from the character and room modeling, to rigging, to animation, to final rendering over the course of 9 weeks. 
 			I briefly documented our process <a href="https://www.dropbox.com/s/eugpjh1m7ljnjxf/Stressball_YAN.pdf?dl=0" class="link">here.</a> 
 			</p>
-			<p>
-			<b>Model Renders and Film Screenshots</b>
-			</p>
+			<h2>Model Renders and Film Screenshots</h2>
 			<div class="proj_img">
 				<img src="../assets/pencup_render.jpg" style= "height:270px; width:233px;">
 				<img src="../assets/fan_render.jpg" style= "height:270px; width:250px;">
@@ -45,9 +44,7 @@
 				<img src="../assets/screen2.png" style= "height:524px; width:802px;">
 				<img src="../assets/screen3.png" style= "height:574px; width:802px;">
 			</div>
-			<p>
-			<b>TAKEAWAYS</b>
-			</p>
+			<h2>Takeaways</h2>
 			<p>
 			Overall, this was an absolutely exhausting yet extremely rewarding project. I  learned so much about myself, from how I deal with stress under deadlines to how I work best on a team. We had so many bumps along the way, the biggest one being a Maya glitch that prevented us from being able to use a render farm to render our scenes - we had to manually "render sequence" each frame on our own (turns out Maya had issues batch rendering discs, which we used for the eyeballs). If given more time, I would love to have focused more on sound and refine some scenes in the middle of the film, but I am so proud of what we accomplished.	
 			</p>
