--- a/projects/superfb.html
+++ b/projects/superfb.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Regina | Modeling | Super Frat Bros</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sunflower:300,700">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,700|Yeseva+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -25,6 +25,7 @@
 
 <div class="top_padding"></div>
 <div class="box_content">
+		<h1>Super Frat Bros Unity Game</h1>
 		<div class="proj_img">
 			<img src="../assets/superfrat.png" style= "height:448px; width:720px;">
 			<p>Play the game <a href="http://superfratbros.surge.sh/" class="link">here!</a></p>
@@ -37,9 +38,7 @@
 		I worked with the project manager to understand the principles of game design and created the assets for what eventually became Super Frat Bros, a parody on Dartmouth culture. 
 		</p>
 		
-		<p>
-		<b>Sample assets</b>
-		</p>
+		<h2>Sample assets</h2>
 		<div class="proj_img">
 			<img src="../assets/axa_animated.gif" style= "height:200px; width:200px;">
 			<img src="../assets/collis.png" style= "height:200px; width:200px;">
