--- a/projects/thedish.html
+++ b/projects/thedish.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Regina | UI/UX | The Dish.</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sunflower:300,700">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,700|Yeseva+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -25,23 +25,19 @@
 
 <div class="top_padding"></div>
 <div class="box_content">
+		<h1>The Dish.</h1>
 		<div class="proj_img">
 			<img src="../assets/projecttile-44.png" style= "height:450px; width:450spx;">
 			<p>View our site <a href="https://www.thedish.us" class="link">here.</a></p>
 		</div>
 
-		<p>
-		<b>Status: Launched</b>
-		</p>
-		<p class="section">
-		<b>OVERVIEW</b>
-		</p>
+
+		<h2>Status: Launched</h2>
+		<h2>Overview</h2>
 		<p>
 		As a design intern at Cogo Labs, I worked on a team with four other interns (two data analysts and two engineers) to create a website from absolute scratch. The theme was “events”, and the end goal was to maximize 10 metrics (such as total visitors, ad CPC, returning visitors, bounce rate). 
 		</p>
-		<p>
-		<b>TIMELINE</b>
-		</p>
+		<h2>Timeline</h2>
 		<p>
 			WEEK 1: Researching & Need-Finding
 		</p>
@@ -64,9 +60,7 @@
 		<br>
 		<br>
 
-		<p class="section">
-		<b>RESEARCH & NEED-FINDING</b>
-		</p>
+		<h2>Research & Need-Finding</h2>
 		<div class="proj_img">
 			<img src="../assets/internz.png" style= "height:300px; width:465px;">
 			<p class="subtitle">A fun sticky-note brainstorming session with the team to map existing products, current experiences, and user pain points</p>
@@ -77,9 +71,7 @@
 		<br>
 		<br>
 
-		<p class="section">
-		<b>LANDING PAGE & USER BASE BUILDING</b>	
-		</p>
+		<h2>Landing Page & User Base Buildup</h2>	
 		<div class="proj_img">
 			<img src="../assets/landing.png" style= "height:512px; width:414px;">
 			<p class="subtitle">Initial landing page for the dish.</p>
@@ -97,9 +89,7 @@
 		<br>
 		<br>
 
-		<p class="section">
-		<b>WIREFRAMING</b>	
-		</p>
+		<h2>Wireframing</h2>	
 		<div class="proj_img">
 			<img src="../assets/cariterate.png" style= "height:225px; width:365px;">
 			<p class="subtitle">A humbling lesson on building a product that will get better and better with each iteration</p>
@@ -114,9 +104,7 @@
 		<br>
 		<br>
 
-		<p class="section">
-		<b>PROTOTYPING & USER TESTING</b>	
-		</p>
+		<h2>Prototyping & User Testing</h2>	
 		<div class="proj_img">
 			<img src="../assets/hifi.png" style= "height:255px; width:650px;">
 			<p class="subtitle">Desktop and mobile high-fidelity mockups of the 3 main pages</p>
@@ -134,9 +122,7 @@
 		<br>
 		<br>
 
-		<p class="section">
-		<b>LAUNCH!</b>	
-		</p>
+		<h2>Launch!</h2>	
 		<div class="proj_img">
 			<img src="../assets/dabeach.png" style= "height:320px; width:485px;">
 			<p class="subtitle">Does this count as work?</p>
@@ -147,9 +133,7 @@
 		<br>
 		<br>
 
-		<p class="section">
-		<b>ITERATING & ADDING FEATURES</b>	
-		</p>
+		<h2>Iterating & Adding Features</h2>	
 		<div class="proj_img">
 			<img src="../assets/abtest.png" style= "height:270px; width:710px;">
 			<p class="subtitle">We created this A/B test to see whether users engaged more with illustration icons or photo images</p>
