--- a/projects/trips.html
+++ b/projects/trips.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Regina | Illustration | Trips Sticker</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sunflower:300,700">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,700|Yeseva+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -25,6 +25,7 @@
 
 <div class="top_padding"></div>	
 	<div class="box_content">
+		<h1>Trips Sticker</h1>
 		<div class="proj_img">
 			<img src="../assets/tripsstickersfinal.png" style= "height:600px; width:600px;">
 		</div>
@@ -32,9 +33,7 @@
 		Dartmouth First Year Trips is a week-long pre-orientation program that sends incoming students into the college's surrounding woods to camp, climb, hike, kayak, mountain-bike, and more. As someone who is heavily involved in the program, I jumped on the opportunity to create a sticker that each student would receive (along with a nalgene and t-shirt) at the end of the trip. 
 		For this design, I focused on minimalism and chose colors and fonts that would portray the spirit of Trips in the most simplistic way possible. This sticker was distributed to over one thousand students in 2017 and will now be reprinted for each incoming class.  
 		</p>
-		<p>
-		<b>TAKEAWAYS</b>
-		</p>
+		<h2>Takeaways</h2>
 		<p>
 		I received one extremely helpful piece of advice shortly before working on this project - design is not complete until there's <b> nothing left to take out </b>. I think I tend to over-design to the point where sometimes I'm just adding things for the sake of adding them, and they don't contribute to the overall design at all. Taking that advice resulted in a sticker that received widespread positive feedback, so I will definitely keep this lesson in mind for the future.  	
 		</p>
