--- a/projects/vox.html
+++ b/projects/vox.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Regina | Illustration | Vox Sportswear</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sunflower:300,700">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,700|Yeseva+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -25,6 +25,7 @@
 
 <div class="top_padding"></div>	
 	<div class="box_content">
+		<h1>Vox Sportswear Designs</h1>
 		<div class="proj_img">
 			<img src="../assets/gdx_tophaus-03.png" style= "height:375px; width:240px;">
 			<img src="../assets/adp_compound-01.png" style= "height:375px; width:375px;">
@@ -46,9 +47,7 @@
 		<p>
 		VOX Sportswear is a student-owned company on campus that creates designs for fraternities and sororities at Dartmouth and other schools. I have been working as their designer since 2018 (to help pay for my Adobe Subscription haha).  
 		</p>
-		<p>
-		<b>TAKEAWAYS</b>
-		</p>
+		<h2>Takeaways</h2>
 		<p>
 		I've learned a lot about working with clients ranging from those with very specific design requests ("please copy this exactly but insert our name in place of these words") to designs where I have more freedom ("we want a spring break shirt with this vibe"). I’ve also learned how to work quickly and meet deadlines for fast turnaround times, and ultimately this gave me some insight into what it's like to create commercial designs.	
 		</p>	
