--- a/projects/apologia.html
+++ b/projects/apologia.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Regina | Illustration | Apologia</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sunflower:300,700">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,700|Yeseva+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -25,6 +25,7 @@
 
 <div class="top_padding"></div>	
 	<div class="box_content">
+		<h2>Apologia Magazine Cover</h2>
 		<div class="proj_img">
 			<img src="../assets/apologiamock.png" style= "height:425px; width:554px;">
 		</div>
@@ -33,7 +34,7 @@
 		After reading the article and researching the meaning behind Plato's thought, I created a cover that portrayed the essence of the freed prisoner returning to the cave with the knowledge of the real world. 
 		</p>
 		<p>
-		<b>TAKEAWAYS</b>
+		<h2>Takeaways</h2>
 		</p>
 		<p>
 		I was given a lot of freedom with the cover design given the established logo/general layout that stayed consistent with previous issues. This was the first project that required research to gain a better understanding of the design challenge. I also made sure to ask many questions since I wanted this cover to accurately reflect Apologia's mission. Being informed strongly aided my design process, and I'll bring this research phase to future projects with partners. 
