--- a/projects/climbingteam.html
+++ b/projects/climbingteam.html
@@ -25,7 +25,7 @@
 
 <div class="top_padding"></div>	
 	<div class="box_content">
-
+		<h1>Climbing Team Shirts</h1>
 		<div class="proj_img">
 			<img src="../assets/climbingteam-01.png" style= "height:510px; width:660px;">
 			<img src="../assets/climbingteam-06.png" style= "height:510px; width:660px;">
