--- a/projects/engs33.html
+++ b/projects/engs33.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Regina | Modeling | ENGS33</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sunflower:300,700">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,700|Yeseva+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -25,6 +25,7 @@
 
 <div class="top_padding"></div>
 <div class="box_content">
+		<h1>Solid Mechanics Cantilever</h1>
 		<div class="proj_img">
 			<img src="../assets/iteration6.png" style= "height:295px; width:225px;">
 		</div>
@@ -37,7 +38,7 @@
 		</p>
 		
 		<p>
-		<b>Iteration 1:</b>
+		<h2>Iteration 1:</h2>
 		</p>
 		<div class="proj_img">
 			<img src="../assets/iteration1.png" style= "height:275px; width:225px;">
@@ -50,7 +51,7 @@
 		<br>
 
 		<p>
-		<b>Iteration 2:</b>
+		<h2>Iteration 2:</h2>
 		</p>
 		<div class="proj_img">
 			<img src="../assets/iteration2.png" style= "height:265px; width:240px;">
@@ -63,7 +64,7 @@
 		<br>
 
 		<p>
-		<b>Iteration 3:</b>
+		<h2>Iteration 3:</h2>
 		</p>
 		<div class="proj_img">
 			<img src="../assets/iteration3.png" style= "height:250px; width:190px;">
@@ -76,7 +77,7 @@
 		<br>
 
 		<p>
-		<b>Iteration 4:</b>
+		<h2>Iteration 4:</h2>
 		</p>
 		<div class="proj_img">
 			<img src="../assets/iteration4.png" style= "height:290px; width:225px;">
@@ -89,7 +90,7 @@
 		<br>
 
 		<p>
-		<b>Iteration 5:</b>
+		<h2>Iteration 5:</h2>
 		</p>
 		<div class="proj_img">
 			<img src="../assets/iteration5.png" style= "height:280px; width:210px;">
@@ -102,7 +103,7 @@
 		<br>
 
 		<p>
-		<b>Final Design:</b>
+		<h2>Final Design:</h2>
 		</p>
 		<div class="proj_img">
 			<img src="../assets/iteration6.png" style= "height:590px; width:450px;">
