--- a/projects/grafficity.html
+++ b/projects/grafficity.html
@@ -25,6 +25,7 @@
 
 <div class="top_padding"></div>	
 	<div class="box_content">
+		<h1>Grafficity Poster</h1>
 		<div class="proj_img">
 			<img src="../assets/grafficity_final-01.png" style= "height:1080px; width:720px;">
 		</div>
@@ -33,7 +34,7 @@
 			I worked with the team to develop a poster that would visually portray what Grafficity’s purpose and value add. After learning about the team’s goals and the messages they wanted to portray, I started sketching some ideas and came up with a few preliminary designs, shown below. After a few more iterations, I created the final poster and a t-shirt design for their marketing campaign.  
 			</p>
 			<p>
-			<b>TAKEAWAYS</b>
+			<h2>Takeaways</h2>
 			</p>
 			<p>
 			I received a lot of constructive criticism throughout this design process, and it’s awesome to see how much I progressed from the first iteration to the final poster. Looking back, I still could have pushed the colors more especially since the printer made everything less vibrant than they were on my computer screen. I also learned about bringing a partner’s vision to reality (or, ~augmented reality~ heehee) and I really enjoyed the process of trying to understand the core of his need/vision and encapsulating that through design.
