--- a/projects/sharity.html
+++ b/projects/sharity.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Regina | UI/UX | Sharity</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sunflower:300,700">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,700|Yeseva+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -25,12 +25,11 @@
 
 <div class="top_padding"></div>
 <div class="box_content">
+	<h1>Sharity</h1>
 	<div class="proj_img">
 		<img src="../assets/projecttile-41.png" style= "height:450px; width:450spx;">
 	</div>
-	<p>
-	<b>Status: Researching</b>
-	</p>
+	<h2>Status: Researching</h2>
 	<p>
 	Nowadays we have so many opportunities to give to causes. However, there is little, if any, connection between the giver and the receiver, and this lack of communication results in 1) many donations that are not properly distributed to those who need it the most, and 2) the giver not knowing the extent to which their donation benefited an individual, something that decreases the "feel-good" emotion and the motivation to donate in the future. 
 	</p>
@@ -41,7 +40,7 @@
 	I am working as the designer on this project. The project is led by a Stamps Scholar who is conducting research in this field. The site is still in basic wireframe mode (Figma link <a href="https://www.figma.com/proto/H3T05DBPtAsvwYczyuk62jDG/Sharity?node-id=2%3A0&scaling=scale-down" class="link">here</a>) and it will start seeing progress in the upcoming year!
 	</p>
 	<p>
-	<b>Design ideas</b>	
+	<h2>Design ideas</h2>	
 	</p>
 
 	<div class="proj_img">
